[package]
name = "ratscad"
version = "0.1.1"
description = "CAD for the terminal"
authors = ["qewer <yerdemergul@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qewer33/ratscad"
repository = "https://github.com/qewer33/ratscad"
keywords = ["ratatui", "openscad", "tui", "terminal", "cad"]
categories = ["command-line-utilities", "graphics"]
edition = "2024"
exclude = [
    "references/**",
    "scripts/**",
    "assets/screenshot_full.png",
    "assets/screenshot_viewer.png",
    ".github/**",
]

[dependencies]
ratatui = "0.30.0"
ratatui-ratty = "0.2.0"
ratatui-code-editor = { version = "0.0.4", features = ["crossterm"] }
crossterm = "0.29.0"
anyhow = "1"
confy = "0.6"
serde = { version = "1", features = ["derive"] }
